force-app/main/default/objects/breg_Docusign_Settings__c/breg_Docusign_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Docusign Settings</label>
</CustomObject>