force-app/main/default/objects/breg_Docusign_Settings__c/fields/Chars_per_Line__c.field-meta.xml
<CustomField>
    <fullName>Chars_per_Line__c</fullName>
    <description>Aalta BREG-4501 - need to use dynamic page break</description>
    <label>Chars per Line</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>