force-app/main/default/objects/breg_Docusign_Settings__c/fields/Documents_Root_Link__c.field-meta.xml
<CustomField>
    <fullName>Documents_Root_Link__c</fullName>
    <description>Aalta BREG-1035</description>
    <label>Documents Root Link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>