force-app/main/default/objects/breg_Docusign_Settings__c/fields/Integration_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Integration_User_Email__c</fullName>
    <description>Aalta BREG-2046</description>
    <label>Integration User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>