force-app/main/default/objects/breg_Docusign_Settings__c/fields/Lines_After_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lines_After_Rejection_Reason__c</fullName>
    <description>Aalta BREG-4501 - need to use dynamic page break</description>
    <label>Lines After Rejection Reason</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>