force-app/main/default/objects/breg_Docusign_Settings__c/fields/Minimum_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Batch_Size__c</fullName>
    <description>BREG-3186</description>
    <label>Minimum Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>