force-app/main/default/objects/breg_Docusign_Settings__c/fields/Non_Web_Page_Break_Lines_Offset__c.field-meta.xml
<CustomField>
    <fullName>Non_Web_Page_Break_Lines_Offset__c</fullName>
    <description>Aalta BREG-4501 - need to use dynamic page break</description>
    <label>Non Web Page Break Lines Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>