force-app/main/default/objects/breg_Docusign_Settings__c/fields/Page_Lines__c.field-meta.xml
<CustomField>
    <fullName>Page_Lines__c</fullName>
    <description>Aalta BREG-4501 - need to use dynamic page break</description>
    <label>Page Lines</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>